python/testData/inspections/PyUnresolvedReferencesInspection/unresolvedUnreachable.py
def f():
    x = 1
    print(<error descr="Unresolved reference 'z'">z</error>)
    return x
    print(x)
